--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 __pycache__/
 *.pem
 *.drawio
-wp-admin.png
-wp-admin1.png
-wp-admin2.png
+Labs/Lab\ 3/wp-admin.png
+Labs/Lab\ 3/wp-admin1.png
+Labs/Lab\ 3/wp-admin2.png
