--- a/Projects/Project 2/lb/nginx-dca.conf
+++ b/Projects/Project 2/lb/nginx-dca.conf
@@ -13,6 +13,17 @@ http {
         listen 80;
         listen [::]:80;
         server_name _;
-        rewrite ^ https://$host$request_uri permanent;
+        
+        client_max_body_size 0;
+        location / {
+            proxy_pass http://loadbalancer;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
